unpackaged/main/default/objects/Ops_Order__c/Ops_Order__c.object-meta.xml
<CustomObject>
    <description>Order object for the GNO Team. Used for purposes of tracking orders and jobs.</description>
    <label>Ops Order</label>
    <nameField>
        <label>Ops Order ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ops Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>