unpackaged/main/default/objects/Ops_Order__c/fields/ActualInternalCancellationRequester__c.field-meta.xml
<CustomField>
    <fullName>ActualInternalCancellationRequester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to internal user who asks for the cancellation</description>
    <inlineHelpText>Lookup to internal user who asks for the cancellation</inlineHelpText>
    <label>Actual Cancellation Requester - Internal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Ops_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>