unpackaged/main/default/objects/Ops_Order__c/fields/AsanaERPFlag__c.field-meta.xml
<CustomField>
    <fullName>AsanaERPFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asana ERP Flag</label>
    <type>Checkbox</type>
</CustomField>