unpackaged/main/default/objects/Ops_Order__c/fields/Bad_Outcome_Rejected_Worst_Part__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcome_Rejected_Worst_Part__c</fullName>
    <label>Bad Outcome Rejected Worst Part</label>
    <summarizedField>Ordered_Part__c.Bad_Outcome_Reject_Probability__c</summarizedField>
    <summaryForeignKey>Ordered_Part__c.Ops_Order__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>