unpackaged/main/default/objects/Ops_Order__c/fields/Bad_Outcomes_Daily_Tier__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Daily_Tier__c</fullName>
    <label>Bad Outcomes Daily Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>