unpackaged/main/default/objects/Ops_Order__c/fields/Bad_Outcomes_Highest_Probability__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Highest_Probability__c</fullName>
    <description>Powered by the ETL from the Daily Snowflake Job</description>
    <label>Bad Outcomes Highest Probability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>