unpackaged/main/default/objects/Ops_Order__c/fields/Bad_Outcomes_Manage_Result__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Manage_Result__c</fullName>
    <description>Determines if an Order should be managed based on a daily Threshold Powered by the Snowfake ETL</description>
    <label>Bad Outcomes Manage Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manage</fullName>
            </value>
            <value>
                <fullName>Do Not Manage</fullName>
            </value>
            <value>
                <fullName>Daily Score Not Calculated Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>