unpackaged/main/default/objects/Ops_Order__c/fields/Bad_Outcomes_Type__c.field-meta.xml
<CustomField>
    <fullName>Bad_Outcomes_Type__c</fullName>
    <description>The Type of Bad Outcome that cause the Order to become managed. Powered by the Snowflake Daily Job</description>
    <label>Bad Outcomes Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>