unpackaged/main/default/objects/Ops_Order__c/fields/CancellationApprovedByCSuite__c.field-meta.xml
<CustomField>
    <fullName>CancellationApprovedByCSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True or False</description>
    <label>Cancellation Approved By C-Suite</label>
    <type>Checkbox</type>
</CustomField>