unpackaged/main/default/objects/Ops_Order__c/fields/CancellationCSuiteApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>CancellationCSuiteApprovedBy__c</fullName>
    <description>Name of whom approved the cancellation from C-Suite</description>
    <label>Cancellation C-Suite Approved By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>