unpackaged/main/default/objects/Ops_Order__c/fields/CancellationDollarAmount__c.field-meta.xml
<CustomField>
    <fullName>CancellationDollarAmount__c</fullName>
    <label>Cancellation $ Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>