unpackaged/main/default/objects/Ops_Order__c/fields/CancellationFeeReceived__c.field-meta.xml
<CustomField>
    <fullName>CancellationFeeReceived__c</fullName>
    <description>Capture Cancellation Fee Received</description>
    <label>Cancellation Fee Received</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>