unpackaged/main/default/objects/Ops_Order__c/fields/CancellationNeedContactCustomer__c.field-meta.xml
<CustomField>
    <fullName>CancellationNeedContactCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we damaged the relationship/Should this customer be contacted due to this?</description>
    <inlineHelpText>Have we damaged the relationship/Should this customer be contacted due to this?</inlineHelpText>
    <label>Cancellation - Need Contact Customer?</label>
    <type>Checkbox</type>
</CustomField>