unpackaged/main/default/objects/Ops_Order__c/fields/CancellationPartID__c.field-meta.xml
<CustomField>
    <fullName>CancellationPartID__c</fullName>
    <inlineHelpText>Customer Part ID in Cancellation Request</inlineHelpText>
    <label>Cancellation Part ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>