unpackaged/main/default/objects/Ops_Order__c/fields/CancellationReasonCode__c.field-meta.xml
<CustomField>
    <fullName>CancellationReasonCode__c</fullName>
    <label>Cancellation Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request - Design Change Reqd</fullName>
            </value>
            <value>
                <fullName>Customer Request - General</fullName>
            </value>
            <value>
                <fullName>Customer Request - Less than 4 hours</fullName>
            </value>
            <value>
                <fullName>Customer Request - Lost at DFM</fullName>
            </value>
            <value>
                <fullName>Customer Request - Missing Features - AQ</fullName>
            </value>
            <value>
                <fullName>Customer Request - Top 20</fullName>
            </value>
            <value>
                <fullName>FFL Violation</fullName>
            </value>
            <value>
                <fullName>TOS Violation</fullName>
            </value>
            <value>
                <fullName>Xometry Error</fullName>
            </value>
            <value>
                <fullName>Xometry Request - Cannot Meet Leadtime</fullName>
            </value>
            <value>
                <fullName>Xometry Request - Design Change Reqd</fullName>
            </value>
            <value>
                <fullName>Xometry Request - Missing Features - AQ</fullName>
            </value>
            <value>
                <fullName>Xometry Request - Missing Features - MQ</fullName>
            </value>
            <value>
                <fullName>Xometry Request - No Take</fullName>
            </value>
            <value>
                <fullName>Xometry Request - NYOP</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
                <isActive>false</isActive>
                <label>Customer Request</label>
            </value>
            <value>
                <fullName>DFM Cancellation</fullName>
                <isActive>false</isActive>
                <label>DFM Cancellation</label>
            </value>
            <value>
                <fullName>DFM Error</fullName>
                <isActive>false</isActive>
                <label>DFM Error</label>
            </value>
            <value>
                <fullName>Design Changes Reqd</fullName>
                <isActive>false</isActive>
                <label>Design Changes Reqd</label>
            </value>
            <value>
                <fullName>Inaccurate Manual Quote</fullName>
                <isActive>false</isActive>
                <label>Inaccurate Manual Quote</label>
            </value>
            <value>
                <fullName>Incorrect Auto Quote</fullName>
                <isActive>false</isActive>
                <label>Incorrect Auto Quote</label>
            </value>
            <value>
                <fullName>Internal Configuration</fullName>
                <isActive>false</isActive>
                <label>Internal Configuration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>