unpackaged/main/default/objects/Ops_Order__c/fields/CancellationReplacementOrder__c.field-meta.xml
<CustomField>
    <fullName>CancellationReplacementOrder__c</fullName>
    <label>Cancellation Replacement Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Immediately</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - In the Future</fullName>
                <isActive>false</isActive>
                <label>Yes - In the Future</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>