unpackaged/main/default/objects/Ops_Order__c/fields/CancellationReplacementOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>CancellationReplacementOrderAmount__c</fullName>
    <description>Cancellation Replacement Order Total Amount</description>
    <formula>CancellationReplacementOrderNumber__r.OrderTotal__c</formula>
    <inlineHelpText>Cancellation Replacement Order Total Amount</inlineHelpText>
    <label>Cancellation Replacement Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>