unpackaged/main/default/objects/Ops_Order__c/fields/CancellationReplacementOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>CancellationReplacementOrderNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Replacement Order Number</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Ops Orders (Cancellation Replacement Order Number)</relationshipLabel>
    <relationshipName>CancellationReplacementOrderNumber</relationshipName>
    <type>Lookup</type>
</CustomField>