unpackaged/main/default/objects/Ops_Order__c/fields/CancellationRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestStatus__c</fullName>
    <label>Cancellation Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved By C-Suite</fullName>
            </value>
            <value>
                <fullName>Cancelled by DFM/CM</fullName>
            </value>
            <value>
                <fullName>Denied By C-Suite</fullName>
            </value>
            <value>
                <fullName>Pending C-Suite Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Under CPC Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>