unpackaged/main/default/objects/Ops_Order__c/fields/CancellationRequestSubmittedByName__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestSubmittedByName__c</fullName>
    <description>Text Field to Replace User Lookup.</description>
    <inlineHelpText>Text Field to Replace User Lookup.</inlineHelpText>
    <label>Cancellation Request Submitted By Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>