unpackaged/main/default/objects/Ops_Order__c/fields/CancellationRequestSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>CancellationRequestSubmittedDate__c</fullName>
    <label>Cancellation Request Submitted Date</label>
    <type>DateTime</type>
</CustomField>