unpackaged/main/default/objects/Ops_Order__c/fields/CancellationReviewerNote__c.field-meta.xml
<CustomField>
    <fullName>CancellationReviewerNote__c</fullName>
    <description>Note Section for Cancellation Reviewer</description>
    <label>Cancellation Reviewer Note</label>
    <type>TextArea</type>
</CustomField>