unpackaged/main/default/objects/Ops_Order__c/fields/CaseManagement_OpportunityOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseManagement_OpportunityOwner__c</fullName>
    <description>Opp Owner from the Sales Side</description>
    <formula>Opportunity__r.Opportunity_Owner__c</formula>
    <inlineHelpText>Opp Owner from the Sales side.</inlineHelpText>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>