unpackaged/main/default/objects/Ops_Order__c/fields/CaseManager__c.field-meta.xml
<CustomField>
    <fullName>CaseManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CM_Ops_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>