unpackaged/main/default/objects/Ops_Order__c/fields/Cases_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Completed__c</fullName>
    <label>Cases Completed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>