unpackaged/main/default/objects/Ops_Order__c/fields/Cases_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Cases_In_Progress__c</fullName>
    <label>Cases In Progress</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>