unpackaged/main/default/objects/Ops_Order__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>