unpackaged/main/default/objects/Ops_Order__c/fields/ContainsCustomFinish__c.field-meta.xml
<CustomField>
    <fullName>ContainsCustomFinish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ContainsCustomFinish</label>
    <type>Checkbox</type>
</CustomField>