unpackaged/main/default/objects/Ops_Order__c/fields/DaysBetweenOrderCreationCancellation__c.field-meta.xml
<CustomField>
    <fullName>DaysBetweenOrderCreationCancellation__c</fullName>
    <formula>DATEVALUE(CancellationRequestSubmittedDate__c )-  Order_Date__c</formula>
    <label>Days Between Order Creation&amp;Cancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>