unpackaged/main/default/objects/Ops_Order__c/fields/DaysUntilDue__c.field-meta.xml
<CustomField>
    <fullName>DaysUntilDue__c</fullName>
    <formula>if(or(ERPStatus__c == "Shipped",ERPStatus__c == "Shipped",ERPStatus__c == "Picked-Up by Customer", ERPStatus__c == "Delivered"), "Complete", if(ERPStatus__c = "Order Cancelled", ERPStatus__c, TEXT(TODAY() - DueDate__c)))</formula>
    <label>Days Until Due</label>
    <type>Text</type>
</CustomField>