unpackaged/main/default/objects/Ops_Order__c/fields/DFMDescription__c.field-meta.xml
<CustomField>
    <fullName>DFMDescription__c</fullName>
    <label>DFM Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>