unpackaged/main/default/objects/Ops_Order__c/fields/DFMRecommendation__c.field-meta.xml
<CustomField>
    <fullName>DFMRecommendation__c</fullName>
    <label>DFM Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>