unpackaged/main/default/objects/Ops_Order__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Date the Order needs to be completed</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>