unpackaged/main/default/objects/Ops_Order__c/fields/ERPStatus__c.field-meta.xml
<CustomField>
    <fullName>ERPStatus__c</fullName>
    <label>ERP Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>