unpackaged/main/default/objects/Ops_Order__c/fields/EUD_MissingEndUseData__c.field-meta.xml
<CustomField>
    <fullName>EUD_MissingEndUseData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing End Use Data?</label>
    <type>Checkbox</type>
</CustomField>