unpackaged/main/default/objects/Ops_Order__c/fields/ExpiredPart__c.field-meta.xml
<CustomField>
    <fullName>ExpiredPart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have any of the parts expired?</label>
    <type>Checkbox</type>
</CustomField>