unpackaged/main/default/objects/Ops_Order__c/fields/FullPartialCancellation__c.field-meta.xml
<CustomField>
    <fullName>FullPartialCancellation__c</fullName>
    <label>Full/Partial Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>