unpackaged/main/default/objects/Ops_Order__c/fields/HasOrderEvent__c.field-meta.xml
<CustomField>
    <fullName>HasOrderEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Order Event?</label>
    <type>Checkbox</type>
</CustomField>