unpackaged/main/default/objects/Ops_Order__c/fields/Is_Large_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Large_Order__c</fullName>
    <formula>AND(AllOrdersTotal__c  &gt;  $CustomMetadata.Admin_Ref_Variable__mdt.LargeOrderAmount.Number_Ref_Value__c,
 Order_Date__c  &gt;=  $CustomMetadata.Admin_Ref_Variable__mdt.LargeOrderAmount.Date_Ref_Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Large Order</label>
    <type>Checkbox</type>
</CustomField>