unpackaged/main/default/objects/Ops_Order__c/fields/IsStainlessSteel_Mat__c.field-meta.xml
<CustomField>
    <fullName>IsStainlessSteel_Mat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is StainlessSteel Mat</label>
    <type>Checkbox</type>
</CustomField>