unpackaged/main/default/objects/Ops_Order__c/fields/JobQualifiedForEvent__c.field-meta.xml
<CustomField>
    <fullName>JobQualifiedForEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Qualified For Event?</label>
    <type>Checkbox</type>
</CustomField>