unpackaged/main/default/objects/Ops_Order__c/fields/Jobs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Jobs_Completed__c</fullName>
    <label>Jobs Reviewed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>