unpackaged/main/default/objects/Ops_Order__c/fields/Jobs_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Jobs_In_Progress__c</fullName>
    <label>Jobs In Progress</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>