unpackaged/main/default/objects/Ops_Order__c/fields/Large_Order_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Status_Change__c</fullName>
    <label>Large Order Status Change</label>
    <type>DateTime</type>
</CustomField>