unpackaged/main/default/objects/Ops_Order__c/fields/Large_Order_Tier__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Tier__c</fullName>
    <formula>IF(
AND((AllOrdersTotal__c &gt;= 30000) ,(AllOrdersTotal__c&lt;=50000)),
"Silver",IF(AND((AllOrdersTotal__c&gt;=50001)),"Gold","Not Large Order"
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Large Order Tier</label>
    <type>Text</type>
</CustomField>