unpackaged/main/default/objects/Ops_Order__c/fields/LargeOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>LargeOrderStatus__c</fullName>
    <label>Large Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DFM-Pending Review</fullName>
            </value>
            <value>
                <fullName>DFM-Review Complete</fullName>
            </value>
            <value>
                <fullName>Job(s) Pending Technical Review</fullName>
            </value>
            <value>
                <fullName>Large Order Review Process Complete</fullName>
            </value>
            <value>
                <fullName>DFM Initial Review Complete</fullName>
                <isActive>false</isActive>
                <label>DFM Initial Review Complete</label>
            </value>
            <value>
                <fullName>DFM LOR Complete</fullName>
                <isActive>false</isActive>
                <label>DFM LOR Complete</label>
            </value>
            <value>
                <fullName>Job(s) Accepted</fullName>
                <isActive>false</isActive>
                <label>Job(s) Accepted</label>
            </value>
            <value>
                <fullName>Job(s) Pushed</fullName>
                <isActive>false</isActive>
                <label>Job(s) Pushed</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Order Placed</fullName>
                <isActive>false</isActive>
                <label>Order Placed</label>
            </value>
            <value>
                <fullName>Tech Review (MPC) Complete</fullName>
                <isActive>false</isActive>
                <label>Tech Review (MPC) Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>