unpackaged/main/default/objects/Ops_Order__c/fields/ManufacturingProcess__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProcess__c</fullName>
    <label>Manufacturing Process</label>
    <length>250</length>
    <type>Text</type>
</CustomField>