unpackaged/main/default/objects/Ops_Order__c/fields/ManufacturingProcessGroup__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingProcessGroup__c</fullName>
    <label>Manufacturing Process Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additive</fullName>
            </value>
            <value>
                <fullName>Subtractive</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>