unpackaged/main/default/objects/Ops_Order__c/fields/Ops_AccountCustomerServiceLevel__c.field-meta.xml
<CustomField>
    <fullName>Ops_AccountCustomerServiceLevel__c</fullName>
    <label>[OPS] Account Customer Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>