unpackaged/main/default/objects/Ops_Order__c/fields/Ops_Top20Customer__c.field-meta.xml
<CustomField>
    <fullName>Ops_Top20Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Ops] Top 20 Customer</label>
    <type>Checkbox</type>
</CustomField>