unpackaged/main/default/objects/Ops_Order__c/fields/Ops_TopQualityCustomer__c.field-meta.xml
<CustomField>
    <fullName>Ops_TopQualityCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[OPS] Top Quality Customer</label>
    <type>Checkbox</type>
</CustomField>