unpackaged/main/default/objects/Ops_Order__c/fields/Order_ERP__c.field-meta.xml
<CustomField>
    <fullName>Order_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order ERP</label>
    <referenceTo>Order_Erp__c</referenceTo>
    <relationshipLabel>Ops Orders</relationshipLabel>
    <relationshipName>Ops_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>