unpackaged/main/default/objects/Ops_Order__c/fields/Order_OverDue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Order_OverDue_Flag__c</fullName>
    <label>Order OverDue Flag</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>