unpackaged/main/default/objects/Ops_Order__c/fields/OrderTotal__c.field-meta.xml
<CustomField>
    <fullName>OrderTotal__c</fullName>
    <label>Order Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>