unpackaged/main/default/objects/Ops_Order__c/fields/OriginalDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalDeliveryDate__c</fullName>
    <label>Original Delivery Date</label>
    <type>Date</type>
</CustomField>