unpackaged/main/default/objects/Ops_Order__c/fields/OTS_Status__c.field-meta.xml
<CustomField>
    <fullName>OTS_Status__c</fullName>
    <formula>if(or(ERPStatus__c == "Shipped",ERPStatus__c == "Shipped",ERPStatus__c == "Picked-Up by Customer", ERPStatus__c == "Delivered"), "Complete", if(ERPStatus__c = "Order Cancelled", ERPStatus__c, IF( DueDate__c &gt;  TODAY(), "On Track", "Late")))</formula>
    <label>OTS Status</label>
    <type>Text</type>
</CustomField>