unpackaged/main/default/objects/Ops_Order__c/fields/ParentOpsOrder__c.field-meta.xml
<CustomField>
    <fullName>ParentOpsOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Ops Order</label>
    <referenceTo>Ops_Order__c</referenceTo>
    <relationshipLabel>Ops Orders</relationshipLabel>
    <relationshipName>Child_Ops_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>