unpackaged/main/default/objects/Ops_Order__c/fields/ParentOpsOrderID__c.field-meta.xml
<CustomField>
    <fullName>ParentOpsOrderID__c</fullName>
    <label>Parent Ops Order ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>