unpackaged/main/default/objects/Ops_Order__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>POD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Albatrosses</fullName>
            </value>
            <value>
                <fullName>Atomic Rocks</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>First Impressions</fullName>
            </value>
            <value>
                <fullName>Impodsters</fullName>
            </value>
            <value>
                <fullName>Rocket Power</fullName>
            </value>
            <value>
                <fullName>SpaceTechs</fullName>
            </value>
            <value>
                <fullName>Triple Threat</fullName>
            </value>
            <value>
                <fullName>Amazing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>