unpackaged/main/default/objects/Ops_Order__c/fields/PODManager__c.field-meta.xml
<CustomField>
    <fullName>PODManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User to find POD Manager</description>
    <inlineHelpText>To identify who is the POD Manager on the Ops Order.</inlineHelpText>
    <label>POD Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Xometry GNO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PodManager</relationshipName>
    <type>Lookup</type>
</CustomField>