unpackaged/main/default/objects/Ops_Order__c/fields/PricingTier__c.field-meta.xml
<CustomField>
    <fullName>PricingTier__c</fullName>
    <label>Pricing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>expedite</fullName>
            </value>
            <value>
                <fullName>standard</fullName>
            </value>
            <value>
                <fullName>economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>