unpackaged/main/default/objects/Ops_Order__c/fields/PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContact__c</fullName>
    <formula>Opportunity__r.Primary_Contact__r.FirstName + " " +  Opportunity__r.Primary_Contact__r.LastName + BR()
+ Opportunity__r.Primary_Contact__r.Email + BR() +  Opportunity__r.Primary_Contact__r.Phone</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>