unpackaged/main/default/objects/Ops_Order__c/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <label>Quote Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>